WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211462
Assert that EventHandler only tracks event target nodes in its own document
https://bugs.webkit.org/show_bug.cgi?id=211462
Summary
Assert that EventHandler only tracks event target nodes in its own document
Simon Fraser (smfr)
Reported
2020-05-05 12:15:34 PDT
Assert that EventHandler only tracks event target nodes in its own document
Attachments
Patch
(2.85 KB, patch)
2020-05-05 12:16 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-05-05 12:16:26 PDT
Created
attachment 398537
[details]
Patch
EWS
Comment 2
2020-05-05 13:52:20 PDT
Committed
r261196
: <
https://trac.webkit.org/changeset/261196
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 398537
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-05-05 13:53:13 PDT
<
rdar://problem/62902075
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug