Assert that EventHandler only tracks event target nodes in its own document https://bugs.webkit.org/show_bug.cgi?id=211462

Reviewed by Zalan Bujtas.

EventHandler is per-Frame, so should not track Nodes from different documents. However, it did so
by mistake if an event handler moved a node between documents.

* page/EventHandler.cpp:
(WebCore::EventHandler::updateMouseEventTargetNode):
* rendering/HitTestResult.cpp:
(WebCore::HitTestResult::targetNode const):


Canonical link: https://commits.webkit.org/224369@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261196 268f45cc-cd09-0410-ab3c-d52691b4dbfc